--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name= "viewport" content="width-device-width, initial-scale=1">
 
 		<title>Workout Log</title>
+
 	</head>
 
 	<body>
@@ -14,7 +16,7 @@
 		<li><a href="#define" data-toggle="tab">Define</a></li>
 		<li><a href="#log" data-toggle="tab">Log</a></li>
 		<li><a href="#history" data-toggl="tab">History</a></li>
-
+		<li><a href="#" id="testAPI">Test API</a></li>
 	</ul>
 
 	<div class="container">
@@ -27,5 +29,6 @@
 	</div>
 	<script type="text/javascript" src="./bower_components/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="app.js"></script>
 	</body>
 </html>
