--- a/client/index.html
+++ b/client/index.html
@@ -80,6 +80,7 @@
 	</div>
 	<script type="text/javascript" src="./bower_components/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="app.js"></script>
+	<script type="text/javascript" src="./app.js"></script>
+	<script type="text/javascript" src="./user/auth.js"></script>
 	</body>
 </html>
