--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,22 @@
 		<button id="def-save" class="btn btn-primary">Save</button>
 	</div>
 
+	<!-- Log -->
+	<div class="tab-pane" id="log">
+		<h2>log!</h2>
+		<label>Result</label>
+		<input type="text" class="form-control" id="log-result" />
+		<label>Workout Select:</label>
+		<select class="form-control" id="log-definition"></select>
+		<label>notes</label>
+		<textarea class="form-control" id="log-description" rows="3"></textarea>
+		<button id="log-save" class="btn btn-primary">Save</button>
+		</div>
+	<div class="tab-pane" id="history">
+		<h2>History</h2>
+		<ul class="list-group" id="history-list"></ul>
+	</div>
+
 	<div class="container">
 		<div class="tab-content">
 			<div class="tab-pane active" id="home">
@@ -96,5 +112,6 @@
 	<script type="text/javascript" src="./app.js"></script>
 	<script type="text/javascript" src="./user/auth.js"></script>
 	<script type="text/javascript" src="./workouts/define.js"></script>
+	<script type="text/javascript" src="./workouts/log.js"></script>
 	</body>
 </html>
