--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
 		<li><a href="#" id="testAPI">Test API</a></li>
 	</ul>
 
-	<div class="tab-pane" id="define">
+	<div class="tab-pane fade" id="define">
 		<h2>Define</h2>
 		<label for="def-description">Description</label>
 		<textarea class="form-control" id="def-description" rows="3"></textarea>
@@ -35,7 +35,7 @@
 	</div>
 
 	<!-- Log -->
-	<div class="tab-pane" id="log">
+	<div class="tab-pane fade" id="log">
 		<h2>log!</h2>
 		<label>Result</label>
 		<input type="text" class="form-control" id="log-result" />
@@ -45,7 +45,7 @@
 		<textarea class="form-control" id="log-description" rows="3"></textarea>
 		<button id="log-save" class="btn btn-primary">Save</button>
 		</div>
-	<div class="tab-pane" id="history">
+	<div class="tab-pane fade" id="history">
 		<h2>History</h2>
 		<ul class="list-group" id="history-list"></ul>
 	</div>
